@@ -126,4 +126,8 @@ class Emogrifier {
 	    return $retArr;
 	}
 }
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/contrib/emogrifier/emogrifier.php']) {
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/contrib/emogrifier/emogrifier.php']);
+}
 ?>
